--- a/Html_Templating/views/home.ejs
+++ b/Html_Templating/views/home.ejs
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <h1>Home Page</h1>
+    <h1>Home Page <%="example".toUpperCase()%></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis doloribus expedita quibusdam voluptate distinctio! Sit accusantium quasi, asperiores cum similique unde ipsa quo saepe voluptas maxime facere, molestias rem perferendis?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis doloribus expedita quibusdam voluptate distinctio! Sit accusantium quasi, asperiores cum similique unde ipsa quo saepe voluptas maxime facere, molestias rem perferendis?</p>
     </body>
