--- a/Bootstrap_Demo/views/random.ejs
+++ b/Bootstrap_Demo/views/random.ejs
@@ -2,7 +2,7 @@
 
 <%- include('partials/navbar')%>
 
-<h1>Your random number is: <%= num %></h1>
+<h1>Your random number is <%= num %></h1>
 <% if(num % 2 === 0){ %>
 <h2>That is an even number!</h2>
 <% } else { %>
