--- a/Mongoose_Express/views/products/new.ejs
+++ b/Mongoose_Express/views/products/new.ejs
@@ -11,8 +11,8 @@
         <form action="/products" method="POST">
             <label for="name">Product Name</label>
             <input type="text" name="name" id="name" placeholder="product name">
-            <label for="price">Product Name</label>
-            <input type="number" name="price" id="price" placeholder="product price">
+            <label for="price">Product Price</label>
+            <input type="number" name="price" id="price" placeholder="price">
             <label for="category">Select Category</label>
             <select name="category" id="category">
                 <option value="fruit">Fruit</option>
