--- a/Mongoose_Express/views/products/update.ejs
+++ b/Mongoose_Express/views/products/update.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Update Product</h1>
-        <form action="/products/<%= productId._id %> " method="POST">
+        <form action="/products/<%= productId._id %>?_method=PUT " method="POST">
             <label for="name">Product Name</label>
             <input type="text" name="name" id="name" placeholder="product name" value="<%= productId.name %> ">
             <label for="price">Product Price</label>
