add button to go to update product

--- a/Mongoose_Express/views/products/detail.ejs
+++ b/Mongoose_Express/views/products/detail.ejs
@@ -12,5 +12,6 @@
             <li>Category: <%= foundProductById.category %> </li>
         </ul>
     <a href="/products">Back To All Products</a>
+    <a href="/products/<%= foundProductById._id %>/update ">Update Products</a>
     </body>
 </html>
