--- a/Mongoose_Express/views/products/new.ejs
+++ b/Mongoose_Express/views/products/new.ejs
@@ -15,8 +15,11 @@
             <input type="number" name="price" id="price" placeholder="price">
             <label for="category">Select Category</label>
             <select name="category" id="category">
-                <option value="fruit">Fruit</option>
-                <option value="vegetable">Vegetable</option>
+                <!-- <option value="fruit">Fruit</option>
+                <option value="vegetable">Vegetable</option> -->
+                <% categories.forEach(category => { %>
+                    <option value="<%= category %> "><%= category %></option>
+                <% }) %>
             </select>
             <button>App Product</button>
         </form>
