--- a/Mongoose_Express/views/products/update.ejs
+++ b/Mongoose_Express/views/products/update.ejs
@@ -15,10 +15,14 @@
             <input type="number" id="price" name="price" placeholder="price" value="<%= productId.price %>">
             <label for="category">Select Category</label>
             <select name="category" id="category">
-                <option value="fruit">Fruit</option>
-                <option value="vegetable">Vegetable</option>
+                <!-- <option value="fruit" <%= productId.category === 'fruit' ? 'selected' : ''%> >Fruit</option>
+                <option value="vegetable" <%= productId.category === 'vegetable' ? 'selected' : ''%>>Vegetable</option> -->
+                <% categories.forEach(category => { %>
+                    <option value="<%= category %> "><%= productId.category === category ? 'selected' : '' %> <%= category %></option>
+                <% }) %>
             </select>
             <button>App Product</button>
         </form>
+        <a href="/products/<%= productId._id %> ">Cancel</a>
     </body>
 </html>
