--- a/Mongoose_Express/views/products/update.ejs
+++ b/Mongoose_Express/views/products/update.ejs
@@ -15,9 +15,10 @@
             <input type="number" id="price" name="price" placeholder="price" value="<%= productId.price %>">
             <label for="category">Select Category</label>
             <select name="category" id="category">
-                <% categories.forEach(category => { %>
-                    <option value="<%= category %> "> <%= productId.category === category ? 'selected' : '' %> <%= category %></option>
-                <% }) %>
+
+                <% for(let category of categories)  {%>
+                    <option value="<%=category%>" <%= productId.category === category ? 'selected' : ' ' %>  ><%=category%></option>
+                <%}%> 
             </select>
             <button>App Product</button>
         </form>
