--- a/Mongoose_Express/views/products/detail.ejs
+++ b/Mongoose_Express/views/products/detail.ejs
@@ -11,7 +11,10 @@
             <li>Price: <%= foundProductById.price %> </li>
             <li>Category: <%= foundProductById.category %> </li>
         </ul>
-    <a href="/products">Back To All Products</a>
-    <a href="/products/<%= foundProductById._id %>/update ">Update Products</a>
+        <a href="/products">Back To All Products</a>
+        <a href="/products/<%= foundProductById._id %>/update ">Update Products</a>
+        <form action="/products/<%= foundProductById._id %>?_method=DELETE" method="POST">
+            <button>Delete</button>
+        </form>
     </body>
 </html>
