--- a/Mongoose_Express/views/products/index.ejs
+++ b/Mongoose_Express/views/products/index.ejs
@@ -12,5 +12,6 @@
                 <li><a href="/products/<%=product._id%> "> <%=product.name%></a> </li>
            <% } %> 
         </ul>
+        <a href="/products/new">Add New Product</a>
     </body>
 </html>
